JEKT-24 - Set-up Filter for MANDT using Parameter field from Config. Set-up the SchemaTransform Schema to set the Target Field Name and Formats. Some fields are using Parameter Config fields. Set the Reformat GEM to put the fields in the final Target Table sequence. Created second Pipeline for SAP Systems that do not have the DISUB_OWNER field in the Source table EQBS.

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -16,7 +16,23 @@ pipelines:
     datasets:
       inputs:
       - datasets/DS_SAP_EQBS_01
-      outputs: []
+      outputs:
+      - datasets/DS_MD_SER_NUM_STOCK_SGMNT_SWAP
+    dependencies: {}
+  pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT:
+    name: SAP_02_MD_SER_NUM_STOCK_SGMNT
+    description: JEKT-24-Initial Source GEM and Config Parameters for hcs, mbp, p01,
+      svs source systems on EDM MD_SER_NUM_STOCK_SGMNT where DISUB_OWNER field is
+      missing
+    author: smille29@its.jnj.com
+    mode: batch
+    language: python
+    createdAt: '2023-03-13 21:12:56'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_EQBS_02
+      outputs:
+      - datasets/DS_MD_SER_NUM_STOCK_SGMNT_SWAP
     dependencies: {}
 datasets:
   datasets/DS_SAP_EQBS_01:
@@ -32,6 +48,32 @@ datasets:
         description: ''
         author: smille29@its.jnj.com
         createdAt: '2023-03-13 20:29:35'
+  datasets/DS_MD_SER_NUM_STOCK_SGMNT_SWAP:
+    name: DS_MD_SER_NUM_STOCK_SGMNT_SWAP
+    description: ''
+    author: smille29@its.jnj.com
+    createdAt: '2023-03-13 21:04:37'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: smille29@its.jnj.com
+        createdAt: '2023-03-13 21:04:37'
+  datasets/DS_SAP_EQBS_02:
+    name: DS_SAP_EQBS_02
+    description: ''
+    author: smille29@its.jnj.com
+    createdAt: '2023-03-13 21:15:37'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: smille29@its.jnj.com
+        createdAt: '2023-03-13 21:15:37'
 templates: {}
 jobs: {}
 libraries: []
