--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -13,6 +13,7 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-13 20:16:19'
+    modifiedAt: '2023-03-16 16:23:38'
     datasets:
       inputs:
       - datasets/DS_SAP_EQBS_01
@@ -28,6 +29,7 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-13 21:12:56'
+    modifiedAt: '2023-03-16 13:22:22'
     datasets:
       inputs:
       - datasets/DS_SAP_EQBS_02
@@ -40,6 +42,7 @@ datasets:
     description: ''
     author: smille29@its.jnj.com
     createdAt: '2023-03-13 20:29:35'
+    modifiedAt: '2023-03-13 20:29:35'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -48,11 +51,13 @@ datasets:
         description: ''
         author: smille29@its.jnj.com
         createdAt: '2023-03-13 20:29:35'
+        modifiedAt: '2023-03-13 20:29:35'
   datasets/DS_MD_SER_NUM_STOCK_SGMNT_SWAP:
     name: DS_MD_SER_NUM_STOCK_SGMNT_SWAP
     description: ''
     author: smille29@its.jnj.com
     createdAt: '2023-03-13 21:04:37'
+    modifiedAt: '2023-03-13 21:04:37'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -61,11 +66,13 @@ datasets:
         description: ''
         author: smille29@its.jnj.com
         createdAt: '2023-03-13 21:04:37'
+        modifiedAt: '2023-03-13 21:04:37'
   datasets/DS_SAP_EQBS_02:
     name: DS_SAP_EQBS_02
     description: ''
     author: smille29@its.jnj.com
     createdAt: '2023-03-13 21:15:37'
+    modifiedAt: '2023-03-13 21:15:37'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -74,8 +81,59 @@ datasets:
         description: ''
         author: smille29@its.jnj.com
         createdAt: '2023-03-13 21:15:37'
+        modifiedAt: '2023-03-13 21:15:37'
 templates: {}
-jobs: {}
+jobs:
+  jobs/SAP_BBN_MD_SER_NUM_STOCK_SGMNT:
+    name: SAP_BBN_MD_SER_NUM_STOCK_SGMNT
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 12 * * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-03-16 16:07:01'
+    modifiedAt: '2023-03-16 16:09:24'
+    author: smille29@its.jnj.com
+  jobs/SAP_BBL_MD_SER_NUM_STOCK_SGMNT:
+    name: SAP_BBL_MD_SER_NUM_STOCK_SGMNT
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 13 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-03-16 16:11:17'
+    modifiedAt: '2023-03-16 16:23:47'
+    author: smille29@its.jnj.com
 libraries: []
 subgraphs: {}
 sqlModels: {}
