JEKT-135 - Added Config records for Pipeline MD_SER_NUM_STOCK_SGMNT and the Source Systems that will be running for the Pipeline

--- a/src/pipelines/GENERIC_DELETE/pbt_aspects.yml
+++ b/src/pipelines/GENERIC_DELETE/pbt_aspects.yml
@@ -1,4 +1,13 @@
 version: 1
 configurations:
+- MD_SER_NUM_STOCK_SGMNT_SWAP-HCS
+- MD_SER_NUM_STOCK_SGMNT_SWAP-BBL
+- MD_SER_NUM_STOCK_SGMNT_SWAP-ATL
+- MD_SER_NUM_STOCK_SGMNT_SWAP-P01
+- MD_SER_NUM_STOCK_SGMNT_SWAP-MBP
 - default
+- MD_SER_NUM_STOCK_SGMNT_SWAP-MRS
+- MD_SER_NUM_STOCK_SGMNT_SWAP-BBA
+- MD_SER_NUM_STOCK_SGMNT_SWAP-BBN
+- MD_SER_NUM_STOCK_SGMNT_SWAP-SVS
 dependencies: []
