JEKT-135-Created New Pipeline for GENERIC_SWAP and added Config Variables for the MD_SER_NUM_STOCK_SGMNT CDL L1 Table

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -17,6 +17,18 @@ pipelines:
       inputs: []
       outputs: []
     dependencies: {}
+  pipelines/GENERIC_SWAP:
+    name: GENERIC_SWAP
+    description: ''
+    author: smille29@its.jnj.com
+    mode: batch
+    language: python
+    createdAt: '2023-03-17 15:03:28'
+    modifiedAt: '2023-03-17 15:07:28'
+    datasets:
+      inputs: []
+      outputs: []
+    dependencies: {}
 datasets: {}
 templates: {}
 jobs: {}
