JEKT-166 - Target added

--- a/src/pipelines/SAP_01_MD_PO_SCHED_LINE_DELV/pbt_aspects.yml
+++ b/src/pipelines/SAP_01_MD_PO_SCHED_LINE_DELV/pbt_aspects.yml
@@ -1,5 +1,17 @@
 version: 1
 configurations:
-- default
+- svs
+- ATL
+- p01
 - bbl
+- mbp
+- bba
+- bwi
+- tai
+- mrs
+- hcs
+- default
+- bbn
+- geu
+- fsn
 dependencies: []
