JEKT-195 Created Source GEM for hm2 and set config section.

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,12 +12,28 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-17 19:02:14'
-    modifiedAt: '2023-03-17 19:03:46'
+    modifiedAt: '2023-03-20 11:20:28'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_SAP_01_VBRK
       outputs: []
     dependencies: {}
-datasets: {}
+datasets:
+  datasets/DS_SAP_01_VBRK:
+    name: DS_SAP_01_VBRK
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-03-20 11:05:48'
+    modifiedAt: '2023-03-20 11:05:48'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-03-20 11:05:48'
+        modifiedAt: '2023-03-20 11:05:48'
 templates: {}
 jobs: {}
 libraries: []
