JEKT-195 created TSPAT source and filter gems

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,9 +12,10 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-17 19:02:14'
-    modifiedAt: '2023-03-20 12:08:10'
+    modifiedAt: '2023-03-20 12:15:36'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_TSPAT
       - datasets/DS_SAP_01_VBRK
       outputs: []
     dependencies: {}
@@ -34,6 +35,21 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-03-20 11:05:48'
         modifiedAt: '2023-03-20 11:05:48'
+  datasets/DS_SAP_01_TSPAT:
+    name: DS_SAP_01_TSPAT
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-03-20 12:13:46'
+    modifiedAt: '2023-03-20 12:13:46'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-03-20 12:13:46'
+        modifiedAt: '2023-03-20 12:13:46'
 templates: {}
 jobs: {}
 libraries: []
