--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,10 +12,11 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-17 19:02:14'
-    modifiedAt: '2023-03-20 12:18:54'
+    modifiedAt: '2023-03-20 12:25:18'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TSPAT
+      - datasets/DS_SAP_01_TVFKT
       - datasets/DS_SAP_01_VBRK
       outputs: []
     dependencies: {}
@@ -50,6 +51,21 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-03-20 12:13:46'
         modifiedAt: '2023-03-20 12:13:46'
+  datasets/DS_SAP_01_TVFKT:
+    name: DS_SAP_01_TVFKT
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-03-20 12:21:54'
+    modifiedAt: '2023-03-20 12:21:54'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-03-20 12:21:54'
+        modifiedAt: '2023-03-20 12:21:54'
 templates: {}
 jobs: {}
 libraries: []
