JEKT-195 Added TVKOT to join

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,11 +12,12 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-17 19:02:14'
-    modifiedAt: '2023-03-20 12:25:18'
+    modifiedAt: '2023-03-20 12:29:36'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TSPAT
       - datasets/DS_SAP_01_TVFKT
+      - datasets/DS_SAP_01_TVKOT
       - datasets/DS_SAP_01_VBRK
       outputs: []
     dependencies: {}
@@ -66,6 +67,21 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-03-20 12:21:54'
         modifiedAt: '2023-03-20 12:21:54'
+  datasets/DS_SAP_01_TVKOT:
+    name: DS_SAP_01_TVKOT
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-03-20 12:28:00'
+    modifiedAt: '2023-03-20 12:28:00'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-03-20 12:28:00'
+        modifiedAt: '2023-03-20 12:28:00'
 templates: {}
 jobs: {}
 libraries: []
