JEKT-195 Added TVTWT to join

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,12 +12,13 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-17 19:02:14'
-    modifiedAt: '2023-03-20 12:29:36'
+    modifiedAt: '2023-03-20 12:33:01'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TSPAT
       - datasets/DS_SAP_01_TVFKT
       - datasets/DS_SAP_01_TVKOT
+      - datasets/DS_SAP_01_TVTWT
       - datasets/DS_SAP_01_VBRK
       outputs: []
     dependencies: {}
@@ -82,6 +83,21 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-03-20 12:28:00'
         modifiedAt: '2023-03-20 12:28:00'
+  datasets/DS_SAP_01_TVTWT:
+    name: DS_SAP_01_TVTWT
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-03-20 12:31:42'
+    modifiedAt: '2023-03-20 12:31:42'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-03-20 12:31:42'
+        modifiedAt: '2023-03-20 12:31:42'
 templates: {}
 jobs: {}
 libraries: []
