JEKT-215/Source T141T created

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,10 +12,11 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-20 11:50:56'
-    modifiedAt: '2023-03-20 12:24:26'
+    modifiedAt: '2023-03-20 12:35:58'
     datasets:
       inputs:
       - datasets/DS_SAP_01_NSDM_V_MARC
+      - datasets/DS_SAP_01_T141T
       outputs: []
     dependencies: {}
 datasets:
@@ -34,6 +35,21 @@ datasets:
         author: mbolado1@its.jnj.com
         createdAt: '2023-03-20 12:01:26'
         modifiedAt: '2023-03-20 12:01:26'
+  datasets/DS_SAP_01_T141T:
+    name: DS_SAP_01_T141T
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-03-20 12:33:56'
+    modifiedAt: '2023-03-20 12:33:56'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-03-20 12:33:56'
+        modifiedAt: '2023-03-20 12:33:56'
 templates: {}
 jobs: {}
 libraries: []
