JEKT-215 Sources for HM2 created

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,10 +12,13 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-20 11:50:56'
-    modifiedAt: '2023-03-20 12:43:12'
+    modifiedAt: '2023-03-20 13:21:27'
     datasets:
       inputs:
       - datasets/DS_SAP_01_NSDM_V_MARC
+      - datasets/DS_SAP_01_T024
+      - datasets/DS_SAP_01_T024D
+      - datasets/DS_SAP_01_T024F
       - datasets/DS_SAP_01_T141T
       outputs: []
     dependencies: {}
@@ -50,6 +53,51 @@ datasets:
         author: mbolado1@its.jnj.com
         createdAt: '2023-03-20 12:33:56'
         modifiedAt: '2023-03-20 12:33:56'
+  datasets/DS_SAP_01_T024D:
+    name: DS_SAP_01_T024D
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-03-20 13:09:16'
+    modifiedAt: '2023-03-20 13:09:16'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-03-20 13:09:16'
+        modifiedAt: '2023-03-20 13:09:16'
+  datasets/DS_SAP_01_T024F:
+    name: DS_SAP_01_T024F
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-03-20 13:18:17'
+    modifiedAt: '2023-03-20 13:18:17'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-03-20 13:18:17'
+        modifiedAt: '2023-03-20 13:18:17'
+  datasets/DS_SAP_01_T024:
+    name: DS_SAP_01_T024
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-03-20 13:20:21'
+    modifiedAt: '2023-03-20 13:20:21'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-03-20 13:20:21'
+        modifiedAt: '2023-03-20 13:20:21'
 templates: {}
 jobs: {}
 libraries: []
