JET-176 finished creating raw source gems

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,16 +12,19 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-20 08:44:36'
-    modifiedAt: '2023-03-20 14:47:14'
+    modifiedAt: '2023-03-20 14:58:47'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4101
       - datasets/DS_JDE_01_F41021
       - datasets/DS_JDE_02_F4101
       - datasets/DS_JDE_03_F4101
+      - datasets/DS_JDE_03_F41021
       - datasets/DS_JDE_04_F4101
+      - datasets/DS_JDE_04_F41021
       - datasets/DS_JDE_05_F4101
       - datasets/DS_JDE_06_F4101
+      - datasets/DS_JDE_JDE_02_F41021
       outputs: []
     dependencies: {}
 datasets:
@@ -130,6 +133,51 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-03-20 14:47:11'
         modifiedAt: '2023-03-20 14:47:11'
+  datasets/DS_JDE_JDE_02_F41021:
+    name: DS_JDE_JDE_02_F41021
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-03-20 14:51:54'
+    modifiedAt: '2023-03-20 14:51:54'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-03-20 14:51:54'
+        modifiedAt: '2023-03-20 14:51:54'
+  datasets/DS_JDE_03_F41021:
+    name: DS_JDE_03_F41021
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-03-20 14:55:44'
+    modifiedAt: '2023-03-20 14:55:44'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-03-20 14:55:44'
+        modifiedAt: '2023-03-20 14:55:44'
+  datasets/DS_JDE_04_F41021:
+    name: DS_JDE_04_F41021
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-03-20 14:58:37'
+    modifiedAt: '2023-03-20 14:58:37'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-03-20 14:58:37'
+        modifiedAt: '2023-03-20 14:58:37'
 templates: {}
 jobs: {}
 libraries: []
