Reverted to JEKT-215 Join_1 In progress, commit hash : aab1972c06a5ecec4e4c976656031c777a20f169

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,27 +12,14 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-20 11:50:56'
-    modifiedAt: '2023-03-20 16:39:06'
+    modifiedAt: '2023-03-20 14:00:18'
     datasets:
       inputs:
       - datasets/DS_SAP_01_NSDM_V_MARC
       - datasets/DS_SAP_01_T024
       - datasets/DS_SAP_01_T024D
       - datasets/DS_SAP_01_T024F
-      - datasets/DS_SAP_T141T_EN
-      outputs: []
-    dependencies: {}
-  pipelines/SAP_T141T_EN:
-    name: SAP_T141T_EN
-    description: ''
-    author: mbolado1@its.jnj.com
-    mode: batch
-    language: python
-    createdAt: '2023-03-20 16:27:17'
-    modifiedAt: '2023-03-20 16:36:18'
-    datasets:
-      inputs:
-      - datasets/DS_SAP_T141T_EN
+      - datasets/DS_SAP_01_T141T
       outputs: []
     dependencies: {}
 datasets:
@@ -111,33 +98,10 @@ datasets:
         author: mbolado1@its.jnj.com
         createdAt: '2023-03-20 13:20:21'
         modifiedAt: '2023-03-20 13:20:21'
-  datasets/DS_SAP_T141T_EN:
-    name: DS_SAP_T141T_EN
-    description: ''
-    author: mbolado1@its.jnj.com
-    createdAt: '2023-03-20 16:30:09'
-    modifiedAt: '2023-03-20 16:30:09'
-    mode: batch
-    physicalDatasets:
-      CDL_L1_Dev:
-        fabricId: 32
-        datasetType: Database
-        description: ''
-        author: mbolado1@its.jnj.com
-        createdAt: '2023-03-20 16:30:09'
-        modifiedAt: '2023-03-20 16:30:09'
 templates: {}
 jobs: {}
 libraries: []
-subgraphs:
-  subgraphs/SG_LU_T141T_EN:
-    name: SG_LU_T141T_EN
-    description: ''
-    author: mbolado1@its.jnj.com
-    language: python
-    mode: batch
-    createdAt: '2023-03-20 16:35:43'
-    modifiedAt: '2023-03-20 16:38:56'
+subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
 dependencies: []
