JEKT-166 - target updated.

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,11 +12,12 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-17 14:47:12'
-    modifiedAt: '2023-03-20 12:04:55'
+    modifiedAt: '2023-03-20 16:22:55'
     datasets:
       inputs:
       - datasets/DS_SAP_01_EKET
-      outputs: []
+      outputs:
+      - datasets/DS_MD_PO_SCHED_LINE_DELV_SWAP
     dependencies: {}
 datasets:
   datasets/DS_SAP_01_EKET:
@@ -24,7 +25,7 @@ datasets:
     description: ''
     author: fsano1@its.jnj.com
     createdAt: '2023-03-17 15:19:05'
-    modifiedAt: '2023-03-20 11:48:29'
+    modifiedAt: '2023-03-20 13:57:41'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -34,6 +35,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-03-17 15:19:05'
         modifiedAt: '2023-03-17 15:19:05'
+  datasets/DS_MD_PO_SCHED_LINE_DELV_SWAP:
+    name: DS_MD_PO_SCHED_LINE_DELV_SWAP
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-03-20 13:51:34'
+    modifiedAt: '2023-03-20 16:22:55'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-03-20 13:51:34'
+        modifiedAt: '2023-03-20 13:51:34'
 templates: {}
 jobs: {}
 libraries: []
