JEKT-266 - Source Text Tables Created

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,9 +12,13 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-20 17:43:31'
-    modifiedAt: '2023-03-20 22:26:43'
+    modifiedAt: '2023-03-20 22:53:24'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_TSPAT
+      - datasets/DS_SAP_01_TVFKT
+      - datasets/DS_SAP_01_TVKOT
+      - datasets/DS_SAP_01_TVTWT
       - datasets/DS_SAP_01_VBRK
       outputs: []
     dependencies: {}
@@ -34,6 +38,66 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-03-20 17:57:13'
         modifiedAt: '2023-03-20 17:57:13'
+  datasets/DS_SAP_01_TVKOT:
+    name: DS_SAP_01_TVKOT
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-03-20 22:46:21'
+    modifiedAt: '2023-03-20 22:46:21'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-03-20 22:46:21'
+        modifiedAt: '2023-03-20 22:46:21'
+  datasets/DS_SAP_01_TVTWT:
+    name: DS_SAP_01_TVTWT
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-03-20 22:48:43'
+    modifiedAt: '2023-03-20 22:50:00'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-03-20 22:48:43'
+        modifiedAt: '2023-03-20 22:48:43'
+  datasets/DS_SAP_01_TSPAT:
+    name: DS_SAP_01_TSPAT
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-03-20 22:51:02'
+    modifiedAt: '2023-03-20 22:51:02'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-03-20 22:51:02'
+        modifiedAt: '2023-03-20 22:51:02'
+  datasets/DS_SAP_01_TVFKT:
+    name: DS_SAP_01_TVFKT
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-03-20 22:53:20'
+    modifiedAt: '2023-03-20 22:53:20'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-03-20 22:53:20'
+        modifiedAt: '2023-03-20 22:53:20'
 templates: {}
 jobs: {}
 libraries: []
