JETK-176 Swapped in variables in location part of source gem

--- a/src/datasets/DS_JDE_01_F41021/pbt_aspects.yml
+++ b/src/datasets/DS_JDE_01_F41021/pbt_aspects.yml
@@ -2,13 +2,6 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: LIITM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: _deleted_
     type: string
     nullable: true
@@ -31,6 +24,13 @@ schema:
       mappings: []
       tags: []
   - name: LILOCN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LIITM
     type: string
     nullable: true
     metadata:
@@ -205,13 +205,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: LICSID
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: LIURAB
     type: string
     nullable: true
@@ -290,6 +283,104 @@ schema:
       mappings: []
       tags: []
   - name: LIQTO2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LIHCMS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LIPJCM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LIPJDM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LISCMS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LISIBW
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LISOBW
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LISQOH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LISQWO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LISREQ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LISWHC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LISWSC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LICHDF
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LIWPDF
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LICFGSID
     type: string
     nullable: true
     metadata:
