JEKT-186-Creaton swap table

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,11 +12,12 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-17 17:58:14'
-    modifiedAt: '2023-03-17 19:11:50'
+    modifiedAt: '2023-03-21 12:15:32'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARC
-      outputs: []
+      outputs:
+      - datasets/MD_MATL_LOC_SWAP
     dependencies: {}
 datasets:
   datasets/DS_SAP_01_MARC:
@@ -34,6 +35,21 @@ datasets:
         author: ggrilo1@its.jnj.com
         createdAt: '2023-03-17 18:02:35'
         modifiedAt: '2023-03-17 18:02:35'
+  datasets/MD_MATL_LOC_SWAP:
+    name: MD_MATL_LOC_SWAP
+    description: ''
+    author: ggrilo1@its.jnj.com
+    createdAt: '2023-03-21 11:27:18'
+    modifiedAt: '2023-03-21 12:15:32'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ggrilo1@its.jnj.com
+        createdAt: '2023-03-21 11:27:19'
+        modifiedAt: '2023-03-21 11:27:19'
 templates: {}
 jobs: {}
 libraries: []
