JEKT-176 Created target object and fixed formats

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,7 +12,7 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-20 08:44:36'
-    modifiedAt: '2023-03-21 11:03:40'
+    modifiedAt: '2023-03-21 12:23:42'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4101
@@ -25,7 +25,8 @@ pipelines:
       - datasets/DS_JDE_05_F4101
       - datasets/DS_JDE_06_F4101
       - datasets/DS_JDE_JDE_02_F41021
-      outputs: []
+      outputs:
+      - datasets/MD_MATL_INV_SWAP
     dependencies: {}
 datasets:
   datasets/DS_JDE_01_F4101:
@@ -178,6 +179,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-03-20 14:58:37'
         modifiedAt: '2023-03-20 14:58:37'
+  datasets/MD_MATL_INV_SWAP:
+    name: MD_MATL_INV_SWAP
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-03-21 11:51:31'
+    modifiedAt: '2023-03-21 11:51:31'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-03-21 11:51:31'
+        modifiedAt: '2023-03-21 11:51:31'
 templates: {}
 jobs: {}
 libraries: []
