JEKT-176 Correct names

--- a/src/datasets/MD_MATL_INV_SWAP/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_INV_SWAP/pbt_aspects.yml
@@ -72,14 +72,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: 'IN_TRNSFR_STCK '
+  - name: IN_TRNSFR_STCK
     type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: 'QLTY_INSP_STCK '
+  - name: QLTY_INSP_STCK
     type: decimal(18,4)
     nullable: true
     metadata:
@@ -94,21 +94,21 @@ schema:
       mappings: []
       tags: []
   - name: BLCKD_STCK
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CRT_DTTM
-    type: void
+    type: timestamp
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: 'RTRNS  '
-    type: void
+  - name: RTRNS
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -122,28 +122,28 @@ schema:
       mappings: []
       tags: []
   - name: STO_IN_TRNST_QTY
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PLNT_IN_TRNST_QTY
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: FISC_YR_OF_CUR_PER
-    type: void
+    type: integer
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CUR_PER
-    type: void
+    type: integer
     nullable: true
     metadata:
       description: ''
