JEKT-186-Add all SAP systems

--- a/src/pipelines/SAP_01_MD_MATL_LOC/pbt_aspects.yml
+++ b/src/pipelines/SAP_01_MD_MATL_LOC/pbt_aspects.yml
@@ -1,5 +1,16 @@
 version: 1
 configurations:
-- default
+- GEU
+- FSN
+- MBP
+- BBA
 - BBL
+- P01
+- MRS
+- default
+- HCS
+- BBN
+- SVS
+- TAI
+- BWI
 dependencies: []
