--- a/src/datasets/MD_MATL_LOC_SWAP/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC_SWAP/pbt_aspects.yml
@@ -312,21 +312,21 @@ schema:
       tags: []
   - name: MMS_FIN_CLSN_CD
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: VMI_IND
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MSTR_PLNG_FMLY_CD
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -851,7 +851,7 @@ schema:
       tags: []
   - name: MTS_MTO_FL
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
