--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,7 +12,7 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-17 17:58:14'
-    modifiedAt: '2023-03-21 14:54:40'
+    modifiedAt: '2023-03-21 14:56:18'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARC
@@ -51,7 +51,32 @@ datasets:
         createdAt: '2023-03-21 11:27:19'
         modifiedAt: '2023-03-21 11:27:19'
 templates: {}
-jobs: {}
+jobs:
+  jobs/JOB_SAP_01_MD_MATL_LOC:
+    name: JOB_SAP_01_MD_MATL_LOC
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_MD_MATL_LOC
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-03-21 14:58:14'
+    modifiedAt: '2023-03-21 15:04:56'
+    author: ggrilo1@its.jnj.com
 libraries: []
 subgraphs: {}
 sqlModels: {}
