JEKT-205 fixing datasets

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -5,8 +5,7 @@ author: skostadi@its.jnj.com
 language: python
 buildSystem: wheel
 pipelines: {}
-datasets: {
-
+datasets: 
   datasets/STRCT_MD_HU_SER:
         name: STRCT_MD_HU_SER
         description: ''
@@ -5167,8 +5166,9 @@ datasets: {
             author: skostadi@its.jnj.com
             createdAt: '2023-03-20 18:20:04'
             modifiedAt: '2023-03-20 18:20:04'
-  
-}
+
+
+
 templates: {}
 jobs: {}
 libraries: []
