--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,7 +12,7 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-21 17:29:57'
-    modifiedAt: '2023-03-21 17:30:00'
+    modifiedAt: '2023-03-21 17:51:22'
     datasets:
       inputs: []
       outputs: []
@@ -5184,6 +5184,6 @@ libraries: []
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies: []
 projectDependencies: {}
 pipelineConfigurations: {}
