--- a/src/pipelines/SAP_01_MD_BOM_HDR/pbt_aspects.yml
+++ b/src/pipelines/SAP_01_MD_BOM_HDR/pbt_aspects.yml
@@ -1,6 +1,19 @@
 version: 1
 configurations:
-- default
-- BBN
 - GEU
+- FSN
+- ATL
+- MBP
+- BBA
+- BBL
+- HMD
+- P01
+- MRS
+- default
+- HCS
+- ANS
+- BBN
+- SVS
+- TAI
+- BWI
 dependencies: []
