JEKT-166 Transformation, reformat and re-order applied

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,11 +12,12 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-21 13:11:41'
-    modifiedAt: '2023-03-21 20:11:32'
+    modifiedAt: '2023-03-21 20:31:48'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4311
-      outputs: []
+      outputs:
+      - datasets/md_po_sched_line_delv_swap
     dependencies: {}
 datasets:
   datasets/DS_JDE_01_F4311:
@@ -34,6 +35,21 @@ datasets:
         author: jcacere7@its.jnj.com
         createdAt: '2023-03-21 13:23:05'
         modifiedAt: '2023-03-21 13:23:05'
+  datasets/md_po_sched_line_delv_swap:
+    name: md_po_sched_line_delv_swap
+    description: ''
+    author: jcacere7@its.jnj.com
+    createdAt: '2023-03-21 20:31:38'
+    modifiedAt: '2023-03-21 20:31:38'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcacere7@its.jnj.com
+        createdAt: '2023-03-21 20:31:38'
+        modifiedAt: '2023-03-21 20:31:38'
 templates: {}
 jobs: {}
 libraries: []
