--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12,7 +12,7 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-21 17:29:57'
-    modifiedAt: '2023-03-21 19:41:28'
+    modifiedAt: '2023-03-21 20:22:23'
     datasets:
       inputs: []
       outputs:
@@ -440,7 +440,7 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-21 17:29:57'
-    modifiedAt: '2023-03-21 19:18:05'
+    modifiedAt: '2023-03-21 20:23:18'
     datasets:
       inputs: []
       outputs:
@@ -5836,19 +5836,52 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/TBL_STRCT_MES_MD_WORKFLOW
+    - pipelines/TBL_STRCT_MD_DOC
     - pipelines/TBL_STRCT_MD_BUSINESS_PARTNER
     - pipelines/TBL_STRCT_MD_HANDLING_UNIT
+    - pipelines/TBL_STRCT_MD_BILLING
+    - pipelines/TBL_STRCT_MD_DELIVERIES
     - pipelines/TBL_STRCT_MD_PLANT
+    - pipelines/TBL_STRCT_MD_TRACKING_DATA
+    - pipelines/TBL_STRCT_MD_INVENTORY_STOCK
+    - pipelines/TBL_STRCT_MD_PURCHASE_ORDER
+    - pipelines/TBL_STRCT_MD_CURRENCY_ENTERPRISE
+    - pipelines/TBL_STRCT_MES_MD_MATERIAL
+    - pipelines/TBL_STRCT_MD_MATERIAL
+    - pipelines/TBL_STRCT_MD_COUNTRY_ENTERPRISE
+    - pipelines/TBL_STRCT_MD_CUSTOMER
+    - pipelines/TBL_STRCT_MES_MD_GENEOLOGY
+    - pipelines/TBL_STRCT_MD_PARTY_ADDRESS
+    - pipelines/TBL_STRCT_MES_MD_SITE_PLANT
     - pipelines/TBL_STRCT_MD_BATCH_MASTER
+    - pipelines/TBL_STRCT_MES_MD_BATCH_LOT
+    - pipelines/TBL_STRCT_MES_MD_REASON_CODES
+    - pipelines/TBL_STRCT_MD
+    - pipelines/TBL_STRCT_MD_TRANSFER_ORDER
+    - pipelines/TBL_STRCT_MD_MANUFACTURING
+    - pipelines/TBL_STRCT_MD_WORKCENTER
     - pipelines/TBL_STRCT_MD_SOURCELIST
     - pipelines/TBL_STRCT_MD_INSPECTION_LOT
+    - pipelines/TBL_STRCT_MES_MD_RESOURCE
+    - pipelines/TBL_STRCT_MD_SHIPPING
+    - pipelines/TBL_STRCT_MD_ROUTING
+    - pipelines/TBL_STRCT_MD_VENDOR_MASTER
+    - pipelines/TBL_STRCT_MD_RESERVATIONS
+    - pipelines/TBL_STRCT_MD_FACTORY_CALENDAR
+    - pipelines/TBL_STRCT_MD_SALES_DOCUMENT_HIERARCHY
+    - pipelines/TBL_STRCT_MD_PROCESS_ORDER
+    - pipelines/TBL_STRCT_MD_LEGAL_ENTITY
+    - pipelines/TBL_STRCT_MD_BILL_OF_MATERIAL
+    - pipelines/TBL_STRCT_MD_SALES_ORDER
+    - pipelines/TBL_STRCT_MD_EQUIPMENT
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: null
     createdAt: '2023-03-21 18:50:06'
-    modifiedAt: '2023-03-21 19:39:50'
+    modifiedAt: '2023-03-21 20:53:49'
     author: skostadi@its.jnj.com
 libraries: []
 subgraphs: {}
