JEKT-24 Created a demo pipeline which writes to the new structure

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -676,6 +676,20 @@ pipelines:
       outputs:
       - datasets/DS_MD_SER_NUM_STOCK_SGMNT_SWAP
     dependencies: {}
+  pipelines/SK_SAP_01_MD_SER_NUM_STOCK_SGMNT:
+    name: SK_SAP_01_MD_SER_NUM_STOCK_SGMNT
+    description: ''
+    author: skostadi@its.jnj.com
+    mode: batch
+    language: python
+    createdAt: '2023-03-22 12:44:39'
+    modifiedAt: '2023-03-22 12:50:53'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_EQBS_01
+      outputs:
+      - datasets/MD_SER_NUM_STOCK_SGMNT
+    dependencies: {}
 datasets:
   datasets/STRCT_MD_HU_SER:
     name: STRCT_MD_HU_SER
@@ -1177,7 +1191,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-03-22 12:50:52'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -5857,7 +5871,7 @@ datasets:
     description: ''
     author: smille29@its.jnj.com
     createdAt: '2023-03-13 21:04:37'
-    modifiedAt: '2023-03-13 21:04:37'
+    modifiedAt: '2023-03-22 12:46:36'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6001,6 +6015,6 @@ libraries: []
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies: []
 projectDependencies: {}
 pipelineConfigurations: {}
