JEKT-24 Switch order of operations to allow flexibility on source system missing columns

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -683,7 +683,7 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-22 12:44:39'
-    modifiedAt: '2023-03-22 12:54:32'
+    modifiedAt: '2023-03-22 13:48:52'
     datasets:
       inputs:
       - datasets/DS_SAP_EQBS_01
@@ -1191,7 +1191,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-22 12:50:52'
+    modifiedAt: '2023-03-22 13:48:02'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6011,6 +6011,31 @@ jobs:
     createdAt: '2023-03-16 16:11:17'
     modifiedAt: '2023-03-16 16:23:47'
     author: smille29@its.jnj.com
+  jobs/L1_MD_BBN:
+    name: L1_MD_BBN
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SK_SAP_01_MD_SER_NUM_STOCK_SGMNT
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-03-22 13:05:15'
+    modifiedAt: '2023-03-22 13:06:35'
+    author: skostadi@its.jnj.com
 libraries: []
 subgraphs: {}
 sqlModels: {}
