--- a/src/datasets/MD_MATL_INV_SWAP/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_INV_SWAP/pbt_aspects.yml
@@ -93,6 +93,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: BLCKD_STCK
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: CRT_DTTM
     type: timestamp
     nullable: true
