--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -652,7 +652,7 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-17 19:02:14'
-    modifiedAt: '2023-03-22 16:29:27'
+    modifiedAt: '2023-03-22 16:40:44'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TSPAT
@@ -660,7 +660,8 @@ pipelines:
       - datasets/DS_SAP_01_TVKOT
       - datasets/DS_SAP_01_TVTWT
       - datasets/DS_SAP_01_VBRK
-      outputs: []
+      outputs:
+      - datasets/MD_BILL_DOC_HDR
     dependencies: {}
 datasets:
   datasets/STRCT_MD_HU_SER:
@@ -1283,7 +1284,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-03-22 16:40:44'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
