--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -652,7 +652,7 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-17 19:02:14'
-    modifiedAt: '2023-03-22 16:40:44'
+    modifiedAt: '2023-03-22 16:45:27'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TSPAT
@@ -5968,6 +5968,6 @@ libraries: []
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies: []
 projectDependencies: {}
 pipelineConfigurations: {}
