--- a/src/datasets/DS_MD_SER_NUM_STOCK_SGMNT_SWAP/pbt_aspects.yml
+++ b/src/datasets/DS_MD_SER_NUM_STOCK_SGMNT_SWAP/pbt_aspects.yml
@@ -94,7 +94,7 @@ schema:
       mappings: []
       tags: []
   - name: DAI_ETL_ID
-    type: string
+    type: integer
     nullable: false
     metadata:
       description: ''
