--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -1,1 +1,11 @@
 version: 1
+schema:
+  type: struct
+  fields:
+  - name: SRC_SYS_CD2
+    type: string
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
