JEKT-215: Target Update & config

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -652,7 +652,7 @@ pipelines:
     mode: batch
     language: python
     createdAt: '2023-03-20 11:50:56'
-    modifiedAt: '2023-03-22 16:28:36'
+    modifiedAt: '2023-03-22 17:06:55'
     datasets:
       inputs:
       - datasets/DS_SAP_01_NSDM_V_MARC
@@ -660,7 +660,8 @@ pipelines:
       - datasets/DS_SAP_01_T024D
       - datasets/DS_SAP_01_T024F
       - datasets/DS_SAP_01_T141T
-      outputs: []
+      outputs:
+      - datasets/MD_MATL_LOC
     dependencies: {}
 datasets:
   datasets/STRCT_MD_HU_SER:
@@ -3173,7 +3174,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-03-22 17:04:22'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -5967,6 +5968,6 @@ libraries: []
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies: []
 projectDependencies: {}
 pipelineConfigurations: {}
