JEKT-166 transform update

--- a/src/datasets/md_po_sched_line_delv_swap/pbt_aspects.yml
+++ b/src/datasets/md_po_sched_line_delv_swap/pbt_aspects.yml
@@ -31,7 +31,7 @@ schema:
       mappings: []
       tags: []
   - name: DELV_DTTM
-    type: timestamp
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -101,7 +101,7 @@ schema:
       mappings: []
       tags: []
   - name: CMT_DTTM
-    type: void
+    type: timestamp
     nullable: true
     metadata:
       description: ''
@@ -122,7 +122,7 @@ schema:
       mappings: []
       tags: []
   - name: DAI_ETL_ID
-    type: string
+    type: integer
     nullable: false
     metadata:
       description: ''
